--- a/firstclass.html
+++ b/firstclass.html
@@ -1,5 +1,3 @@
-<?php include "assets/header.php"; ?>
-<?php // transfer.php (responsive + compact amount) ?>
 <!doctype html>
 <html lang="tr">
 <head>
@@ -45,7 +43,7 @@
   /* Account card */
   .acct{margin-top:8px;border:1px solid var(--line);border-radius:8px;padding:10px;display:flex;gap:12px;align-items:center;background:#fff}
   .acct .name{font-weight:800}
-  .acct .meta{font-size:12px;color:#muted;margin-top:2px}
+  .acct .meta{font-size:12px;color:var(--muted);margin-top:2px}
   .bal{margin-left:auto;display:flex;gap:22px;flex-wrap:wrap}
   .bal .k{font-size:12.5px}
   .bal .k span{display:block}
@@ -123,6 +121,7 @@
 </style>
 </head>
 <body>
+<div id="header-placeholder"></div>
 <div class="container">
   <div class="topbar">
     <h1 class="title">Hesaba EFT</h1>
@@ -286,17 +285,14 @@
 </div>
 
 <script>
-  // IBAN biçimlendirme
   const iban = document.getElementById('iban');
   iban.addEventListener('input', () => {
     let v = iban.value.replace(/[^0-9a-zA-Z]/g,'').toUpperCase();
     if (v && !v.startsWith('TR')) v = 'TR' + v.replace(/^TR/, '');
     const parts = []; for (let i=0;i<v.length;i+=4) parts.push(v.slice(i,i+4));
-    // Yazma sınırı kaldırıldı (slice kaldırıldı)
     iban.value = parts.join(' ');
   });
 
-  // Ad Soyad ipucu: her kelimenin ilk 2 harfi + 5 yıldız
   const ad = document.getElementById('ad');
   const ipucu = document.getElementById('ipucu');
   function maskName(s){
@@ -310,7 +306,6 @@
   function updateHint(){ ipucu.textContent = maskName(ad.value); }
   ad.addEventListener('input', updateHint); updateHint();
 
-  // Tutar: lira binlik ".", kuruş max 2 hane (soldan sağa)
   const lira = document.getElementById('tutarLira');
   const kurus = document.getElementById('tutarKurus');
   function formatLira(val){
@@ -321,7 +316,6 @@
   lira.addEventListener('input', ()=>{ lira.value = formatLira(lira.value); });
   kurus.addEventListener('input', ()=>{ kurus.value = kurus.value.replace(/[^\d]/g,'').slice(0,2); });
 
-  // Tarih: açılışta bugünün tarihi
   const tarih = document.getElementById('tarih');
   function todayTR(){
     const d = new Date();
@@ -338,13 +332,11 @@
     tarih.value = v;
   });
 
-  // Açıklama sayaç
   const aciklama = document.getElementById('aciklama');
   const cnt = document.getElementById('cnt');
   function u(){ cnt.textContent = aciklama.value.length; }
   aciklama.addEventListener('input', u); u();
 
-  // Modal göster/gizle
   const overlay = document.getElementById('overlay');
   const modal = document.getElementById('modal');
   const devamBtn = document.getElementById('devamBtn');
@@ -365,6 +357,14 @@
   okBtn.addEventListener('click', closeModal);
   closeX.addEventListener('click', closeModal);
   overlay.addEventListener('click', closeModal);
+
+  fetch('assets/header.html')
+  .then(response => response.text())
+  .then(html => {
+    document.getElementById('header-placeholder').innerHTML = html;
+  });
+
 </script>
+
 </body>
 </html>
