--- a/dekont.html
+++ b/dekont.html
@@ -17,7 +17,7 @@
     --shadow: 0 8px 22px rgba(16,24,40,0.06);
 }
 *{box-sizing:border-box}
-body{font-family:'Quicksand',sans-serif;background:var(--bg);padding:0;color:#0f172a;-webkit-font-smoothing:antialiased;}
+body{font-family:'Quicksand',sans-serif;background:var(--bg);padding:0;margin:0;color:#0f172a;-webkit-font-smoothing:antialiased;}
 .form-wrap{max-width:980px;margin:0 auto 18px;padding:12px;}
 .form-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;align-items:end;background:transparent;padding:8px;}
 .form-grid .full{grid-column:1 / -1;}
@@ -32,13 +32,13 @@ body{font-family:'Quicksand',sans-serif;background:var(--bg);padding:0;color:#0f
 
 /* dekont */
 .dekont{max-width:900px;margin:18px auto;background:var(--card);border-radius:12px;padding:20px;box-shadow:var(--shadow);border:1px solid var(--border);overflow:hidden}
-.dekont-header{position:relative;height:90px;display:block;margin-bottom:12px}
-.logo{height:80px;object-fit:contain} /* logolar biraz daha büyük */
-.left-logo{position:absolute;left:18px;top:50%;transform:translateY(-50%)}
-.right-logo{position:absolute;right:18px;top:50%;transform:translateY(-50%)}
-.dekont-title{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);text-align:center;}
-.title-main{font-size:20px;font-weight:700;letter-spacing:0.2px}
-.title-sub{font-size:12px;color:var(--muted);margin-top:4px;}
+.dekont .dekont-header{position:relative;height:110px;display:block;margin:0;padding:0}
+.dekont .logo{height:90px;object-fit:contain}
+.dekont .left-logo{position:absolute;left:18px;top:50%;transform:translateY(-50%)}
+.dekont .right-logo{position:absolute;right:18px;top:50%;transform:translateY(-50%)}
+.dekont .dekont-title{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);text-align:center;}
+.dekont .title-main{font-size:22px;font-weight:700;letter-spacing:0.2px}
+.dekont .title-sub{font-size:12px;font-weight:700;color:var(--muted);margin-top:4px;}
 
 /* cards layout */
 .top-cards{display:grid;grid-template-columns:1fr 140px;gap:12px;margin-bottom:12px}
@@ -51,7 +51,7 @@ body{font-family:'Quicksand',sans-serif;background:var(--bg);padding:0;color:#0f
 .info-card .row:last-child, .wide .row:last-child{border-bottom:none}
 .label{font-size:12px;color:var(--muted);min-width:160px}
 .value{font-size:14px;font-weight:600;word-break:break-word;text-align:right}
-.value.left{ text-align:left; } /* soldan hizalamak için */
+.value.left{ text-align:left; }
 .mono{font-family:monospace,monospace;font-weight:600;letter-spacing:1px}
 .amount{font-size:18px;color:var(--accent);font-weight:700}
 
@@ -65,7 +65,7 @@ body{font-family:'Quicksand',sans-serif;background:var(--bg);padding:0;color:#0f
 .info-right .small{color:var(--muted);margin-top:8px}
 .info-right .small-value{font-weight:600}
 
-/* Uyarı - ortalanmış ve daha küçük */
+/* Uyarı */
 .alert-red{color:#c53030;font-weight:600;margin-top:18px;font-size:13px}
 .alert-red.centered{ text-align:center; }
 
@@ -81,21 +81,21 @@ body{font-family:'Quicksand',sans-serif;background:var(--bg);padding:0;color:#0f
 }
 @media (max-width:600px){
     .form-grid{grid-template-columns:1fr}
-    .left-logo, .right-logo{position:static;transform:none;margin:0 auto;display:block;height:56px}
-    .dekont-header{height:auto;padding-top:10px;padding-bottom:10px}
-    .dekont-title{position:static;transform:none;margin:8px 0;text-align:center}
+    .dekont .left-logo, .dekont .right-logo{position:static;transform:none;margin:0 auto;display:block;height:56px}
+    .dekont .dekont-header{height:auto;padding-top:10px;padding-bottom:10px}
+    .dekont .dekont-title{position:static;transform:none;margin:8px 0;text-align:center}
     .top-cards{grid-template-columns:1fr;align-items:center}
     .qr-card{order:2;justify-content:center}
 }
 
-/* PRINT STYLES: A4 uyumlu */
+/* PRINT STYLES */
 @page { size: A4; margin: 10mm; }
 @media print{
     body{background:#fff}
     html,body{height:auto}
     .form-wrap, .alert{display:none}
     .dekont{box-shadow:none;border:none;border-radius:0;padding:10mm;margin:0 auto;max-width:100%;width:100% !important}
-    .left-logo, .right-logo{height:56px}
+    .dekont .left-logo, .dekont .right-logo{height:56px}
     .qr-img{max-width:110px}
     body * { visibility: hidden; }
     .dekont, .dekont * { visibility: visible; }
@@ -119,7 +119,7 @@ body{font-family:'Quicksand',sans-serif;background:var(--bg);padding:0;color:#0f
 
         <div class="form-row">
             <label>Tutar</label>
-            <input name="tutar" type="text" value="00,00" required>
+            <input name="tutar" type="text" value="0,00" required>
         </div>
 
         <div class="form-row full">
@@ -174,7 +174,7 @@ body{font-family:'Quicksand',sans-serif;background:var(--bg);padding:0;color:#0f
             <div class="row"><div class="label">HESAP NUMARASI</div><div class="value">52787867 / IBAN: <span id="ibanDisplay2">TR00 0000 0000 0000 0000 0000 01</span></div></div>
             <div class="row"><div class="label">MÜŞTERİ VERGİ DAİRESİ</div><div class="value" id="vdairesiDisplay">AYDIN</div></div>
             <div class="row"><div class="label">DÖVİZ CİNSİ</div><div class="value" id="dovizDisplay">TL</div></div>
-            <div class="row"><div class="label">İŞLEM TUTARI</div><div class="value amount" id="tutarDisplay">00,00</div></div>
+            <div class="row"><div class="label">İŞLEM TUTARI</div><div class="value amount" id="tutarDisplay">0,00</div></div>
         </div>
     </section>
 
@@ -210,6 +210,13 @@ function formatIban(s){
     return s.replace(/(.{4})/g, '$1 ').trim();
 }
 
+function formatTutar(s){
+    s = s.replace(/\./g,'').replace(',', '.'); // varsa önce noktayı kaldır, virgülü noktaya çevir
+    let num = parseFloat(s);
+    if(isNaN(num)) num = 0;
+    return num.toLocaleString('tr-TR', {minimumFractionDigits:2, maximumFractionDigits:2});
+}
+
 document.getElementById('ibanInput').addEventListener('input', function(){
     this.value = formatIban(this.value);
 });
@@ -217,7 +224,7 @@ document.getElementById('ibanInput').addEventListener('input', function(){
 document.getElementById('showDekont').addEventListener('click', function(){
     const adsoyad = document.querySelector('input[name="adsoyad"]').value || "-";
     const iban = formatIban(document.querySelector('input[name="iban"]').value) || "TR00 0000 0000 0000 0000 0000 01";
-    const tutar = document.querySelector('input[name="tutar"]').value || "00,00";
+    const tutar = formatTutar(document.querySelector('input[name="tutar"]').value || "0,00");
     const aciklama = document.querySelector('input[name="aciklama"]').value || "9415 nolu seri transfer";
     const vdairesi = document.querySelector('input[name="vergi_dairesi"]').value || "AYDIN";
     const doviz = document.querySelector('input[name="doviz"]').value || "TL";
@@ -239,12 +246,12 @@ document.getElementById('downloadPdf').addEventListener('click', function(){
     html2pdf().set({
         margin:10,
         filename:'dekont.pdf',
-        html2canvas:{scale:2, useCORS:true},
+        html2canvas:{scale:2, useCORS:true, scrollY:0},
         jsPDF:{unit:'mm', format:'a4', orientation:'portrait'}
     }).from(element).save();
 });
 
-  fetch('assets/header.html')
+fetch('assets/header.html')
   .then(response => response.text())
   .then(html => {
     document.getElementById('header-placeholder').innerHTML = html;
